- We now build up the argument list in a BStringList and map argv to those.   The previous solution had various issues where argv pointed to stack-based   objects that had potentially been destroyed/overwritten already. Fixes   #8173.

- Modify _SetupGDBArguments() to return an error code and check for it
  accordingly.